--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -8,12 +8,67 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css"/>
 
-    <title>My Project</title>
+    <title>FAQ</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>hello</h2>
-    <h2>hello</h2>
+    <h1>Frequently Asked Questions</h1>
+        <div class="faq-container">
+            <div class="faq active">
+                <h3 class="faq-title">
+                    Lorem, ipsum dolor.
+                </h3>
+                <p class="faq-text">Lorem ipsum dolor sit amet.</p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+
+            </div>
+            <div class="faq ">
+                <h3 class="faq-title">
+                    Lorem, ipsum dolor.
+                </h3>
+                <p class="faq-text">Lorem ipsum dolor sit amet.</p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+
+            </div>
+            <div class="faq ">
+                <h3 class="faq-title">
+                    Lorem, ipsum dolor.
+                </h3>
+                <p class="faq-text">Lorem ipsum dolor sit amet.</p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+
+            </div>
+            <div class="faq ">
+                <h3 class="faq-title">
+                    Lorem, ipsum dolor.
+                </h3>
+                <p class="faq-text">Lorem ipsum dolor sit amet.</p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+
+            </div>
+            <div class="faq ">
+                <h3 class="faq-title">
+                    Lorem, ipsum dolor.
+                </h3>
+                <p class="faq-text">Lorem ipsum dolor sit amet.</p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+
+            </div>
+        </div>
     <script src="script.js"> </script>
 </body>
 </html>
