added and completed random choice picker

--- a/random choice picker/index.html
+++ b/random choice picker/index.html
@@ -8,12 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css"/>
 
-    <title>My Project</title>
+    <title>Random Choice Picker</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>hello</h2>
-    <h2>hello</h2>
+    <div class="container">
+        <h3>Enter All of the Choices, Divided by a Comma (',').
+        <br>Press Enter When You're Done. </h3>
+        <textarea placeholder="Enter Choices Here..." id="textarea"></textarea>
+
+        <div class="tags" id="tags">
+            <!-- <span class="tag ">Choice Uno</span>
+            <span class="tag">Choice Two</span>
+            <span class="tag">Choice trois</span> -->
+        </div>
+
+    </div>
     <script src="script.js"> </script>
 </body>
 </html>
